<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>no.nav.dokdisteformidling</groupId>
	<artifactId>dokdisteformidling</artifactId>
	<packaging>pom</packaging>
	<version>1.0-SNAPSHOT</version>

	<modules>
		<module>app</module>
		<module>core</module>
		<module>qdist013</module>
		<module>sdist001</module>
		<module>schemas-avtaltmelding</module>
		<module>schemas-altinn</module>
	</modules>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.15</version>
	</parent>

	<properties>
		<java.version>17</java.version>

		<camel.version>3.20.5</camel.version>
		<logstash-logback-encoder.version>7.3</logstash-logback-encoder.version>
		<resilience4j.version>2.1.0</resilience4j.version>
		<google-cloud.version>26.22.0</google-cloud.version>
		<tink.version>1.10.0</tink.version>
		<tink-gcpkms.version>1.8.0</tink-gcpkms.version>
		<ibm.mq.allclient.version>9.3.3.0</ibm.mq.allclient.version>
		<commons-io.version>2.13.0</commons-io.version>
		<nimbus-jose-jwt.version>9.31</nimbus-jose-jwt.version>
		<jaxws-ri.version>4.0.1</jaxws-ri.version>
		<commons-asic.version>0.11.0</commons-asic.version>

		<!-- 3.6.0 gjør at tester feiler i Qdist013ForAltinnIT -->
		<cxf.version>3.5.6</cxf.version>

		<!-- Vulnerable Snyk-dependencies -->
		<snakeyaml.version>2.2</snakeyaml.version>
		<bouncycastle-jdk15on.version>1.70</bouncycastle-jdk15on.version>

		<!-- NAV -->
		<melding-virksomhet-dokdistfordeling.version>5-7ff79fc</melding-virksomhet-dokdistfordeling.version>

		<!-- test -->
		<spring-cloud-contract-wiremock.version>3.1.8</spring-cloud-contract-wiremock.version>

		<!-- Plugins -->
		<maven-jaxb2-plugin.version>0.15.2</maven-jaxb2-plugin.version>
		<jaxb2-rich-contract-plugin.version>2.1.0</jaxb2-rich-contract-plugin.version>
		<jaxb2-basics-annotate.version>1.1.0</jaxb2-basics-annotate.version>
		<jaxb2-basics.version>0.13.1</jaxb2-basics.version>
		<jaxb2-basics-tools.version>0.13.1</jaxb2-basics-tools.version>
		<maven-toolchains-plugin.version>3.1.0</maven-toolchains-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>no.nav.dokdisteformidling</groupId>
				<artifactId>core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokdisteformidling</groupId>
				<artifactId>qdist013</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokdisteformidling</groupId>
				<artifactId>sdist001</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokdisteformidling</groupId>
				<artifactId>schemas-avtaltmelding</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dokdisteformidling</groupId>
				<artifactId>schemas-altinn</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>no.nav.meldinger.virksomhet</groupId>
				<artifactId>melding-virksomhet-dokdistfordeling</artifactId>
				<version>${melding-virksomhet-dokdistfordeling.version}</version>
			</dependency>

			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>${logstash-logback-encoder.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.cloud</groupId>
				<artifactId>libraries-bom</artifactId>
				<version>${google-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>com.google.crypto.tink</groupId>
				<artifactId>tink</artifactId>
				<version>${tink.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.crypto.tink</groupId>
				<artifactId>tink-gcpkms</artifactId>
				<version>${tink-gcpkms.version}</version>
			</dependency>
			<dependency>
				<groupId>com.sun.xml.ws</groupId>
				<artifactId>jaxws-ri</artifactId>
				<version>${jaxws-ri.version}</version>
				<type>pom</type>
			</dependency>
			<dependency>
				<groupId>com.ibm.mq</groupId>
				<artifactId>com.ibm.mq.allclient</artifactId>
				<version>${ibm.mq.allclient.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.camel.springboot</groupId>
				<artifactId>camel-spring-boot-bom</artifactId>
				<version>${camel.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- cxf -->
			<dependency>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-bom</artifactId>
				<version>${cxf.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>no.difi.commons</groupId>
				<artifactId>commons-asic</artifactId>
				<version>${commons-asic.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io.version}</version>
			</dependency>
			<dependency>
				<groupId>com.nimbusds</groupId>
				<artifactId>nimbus-jose-jwt</artifactId>
				<version>${nimbus-jose-jwt.version}</version>
			</dependency>
			<dependency>
				<groupId>io.github.resilience4j</groupId>
				<artifactId>resilience4j-spring-boot2</artifactId>
				<version>${resilience4j.version}</version>
			</dependency>

			<!-- overstyrer transitive avhengigheter grunna snyk-rapport -->
			<dependency>
				<groupId>org.yaml</groupId>
				<artifactId>snakeyaml</artifactId>
				<version>${snakeyaml.version}</version>
			</dependency>
			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bcprov-jdk15on</artifactId>
				<version>${bouncycastle-jdk15on.version}</version>
			</dependency>
			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bcpkix-jdk15on</artifactId>
				<version>${bouncycastle-jdk15on.version}</version>
			</dependency>
			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bcutil-jdk15on</artifactId>
				<version>${bouncycastle-jdk15on.version}</version>
			</dependency>

			<!-- test -->
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-contract-wiremock</artifactId>
				<version>${spring-cloud-contract-wiremock.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-toolchains-plugin</artifactId>
				<version>${maven-toolchains-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>toolchain</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<toolchains>
						<jdk>
							<version>${java.version}</version>
							<vendor>openjdk</vendor>
						</jdk>
					</toolchains>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>